--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
 }
 
 .header {
-    width: 1005;
+    width: 100%;
     height: 122px;
     background-color: #B66400;
 }
@@ -54,25 +54,27 @@ html {
 
 .menu a:hover {
     color: #0093E0;
+    transition: .3s;
 }
 
 .sobre {
     background-color: #E07D00;
     height: 808px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.empresas h1 {
-    font-size: 64px;
+.sobre p {
     text-align: center;
-    margin-top: 100px;
-    margin-bottom: 50px;
+    margin-top: 60px;
+
 }
 
-.empresas img {
-    width: 60%;
-    margin: auto;
-    display: block;
 
+.sobre img {
+    height: 250px;
+    margin-bottom: 100px;
 }
 
 .sobre p {
@@ -81,39 +83,119 @@ html {
     font-size: 36px;
 }
 
-.gamificacao h1,
-h3 {
+.empresas h1 {
+    font-family: "Titillium Web";
+    font-size: 50px;
+    text-align: center;
+    margin-top: 200px;
+    margin-bottom: 60px;
+
+}
+
+.empresas img {
+    margin-bottom: 60px;
+}
+
+.gamificacao h2 {
     font-size: 36px;
-}
-
-.gamificacao h2,
-h4 {
-    font-size: 25px;
-}
-
-.gamificacao h1,
-h2,
-h3,
-h4 {
+    font-family: "Titillium Web";
     text-align: center;
 }
 
+.gamificacao p {
+    font-size: 25px;
+    font-family: "Mulish";
+    text-align: center;
+    padding: 100px 20%;
+
+}
+
+h3 {
+    font-size: 36px;
+    font-family: "Titillium Web";
+    text-align: center;
+}
+
+
+
+.sucessos {
+    background-color: #E07D0027;
+    margin-bottom: 478px;
+    margin-top: 20%;
+}
+
+.sucessos h1 {
+    text-align: center;
+    font-family: "Titillium Web";
+    font-size: 40px;
+    padding-top: 15%;
+    padding-bottom: 5%;
+}
+ 
+.imagemempresa {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.escola {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.Hospital {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+h4 {
+    font-size: 38px;
+    font-family: "Titillium Web";
+    text-align: center;
+
+}
+
+.sucessos img {
+    justify-content: center;
+    display: flex;
+    flex-direction: c;
+    
+}
+
+
+
+.sucessos button {
+    background-color: #E07D00;
+    width: 537px;
+    height: 95.57px;
+    border-radius: 150px;
+    text-align: center;
+    font-size: 32px;
+    border-style: none;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    margin-left: 462px;
+    margin-right: 462px;
+}
+
+.sucessos img {
+    padding: 10%;
+}
+
 .retangulo1 {
-    height: 98px;
+    height: 90px;
     background-color: #E07D00;
 }
 
 .sedivirta {
-    justify-content: space-around;
-    padding: 10%;
+    margin-top: 90px;
+    margin-bottom: 90px;
+    margin-left: 70px;
+    margin-right: 70px;
 }
 
-.sedivirta p {
-    font-size: 48px;
-    text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
-}
 
 
 .sedivirta button {
@@ -122,14 +204,50 @@ h4 {
     font-size: 32px;
     background-color: #E07D00;
     border-radius: 10px;
-    border-color: transparent;
-    margin-left: 75%;
-    margin-top: 5%;
+    border-style: none;
+    margin-left: 815px;
+    margin-top: 70px;
+
 }
 
-
+.sedivirta p {
+    font-size: 37px;
+    font-family: "Mulish";
+    text-align: center;
+}
 
 .retangulo2 {
-    height: 98px;
+    height: 90px;
     background-color: #E07D00;
 }
+
+footer {
+    display: flex;
+    width: 100%;
+    height: 253;
+    background-color: #E07D00;
+}
+
+footer img {
+    height: 99px;
+    display: flex;
+    justify-content: center; 
+}
+
+.imgfooter {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin-left: 800px;
+    
+}
+
+footer p {
+    font-family: "Titillium Web";
+    font-size: 20px;
+    text-align: ;
+    
+}
+
+
+
