--- a/style.css
+++ b/style.css
@@ -119,19 +119,19 @@ html {
 .carrosselimg {
     animation-duration: 3s;
     animation-name: slidein;
-  }
-  
-  @keyframes slidein {
+}
+
+@keyframes slidein {
     from {
-      margin-left: 100%;
-      width: 300%;
+        margin-left: 100%;
+        width: 300%;
     }
-  
+
     to {
-      margin-left: 0%;
-      width: 100%;
+        margin-left: 0%;
+        width: 100%;
     }
-  }
+}
 
 
 .gamificacao h2 {
@@ -165,11 +165,14 @@ h3 {
 
 
 
+
+
 .imagens {
     display: flex;
     justify-content: center;
     justify-content: space-around;
     text-align: center;
+
 }
 
 h4 {
@@ -178,20 +181,15 @@ h4 {
     text-align: center;
     padding-top: 10%;
     margin-bottom: 100px;
-    
+
 }
 
 .empresa p {
     font-family: "Nunito";
-    font-size: 15px;
+    font-size: 32px;
 }
 
 
-h5 {
-    font-size: 27px;
-    font-family: "Nunito";
-    text-align: center;
-}
 
 
 
@@ -206,6 +204,22 @@ h5 {
     font-size: 32px;
 }
 
+.empresa img:hover {
+    box-shadow: 15px 10px #E07D0027;
+    transition: .7s;
+}
+
+.escola img:hover {
+    box-shadow: 15px 10px #E07D0027;
+    transition: .7s;
+}
+
+.hospital img:hover {
+    box-shadow: 15px 10px #E07D0027;
+    transition: .7s;
+}
+
+
 
 
 .retangulo1 {
@@ -218,6 +232,29 @@ h5 {
     margin-bottom: 90px;
     margin-left: 70px;
     margin-right: 70px;
+}
+
+.sucessos button {
+
+    font-family: "Nunito";
+    font-size: 32px;
+    font-weight: 300;
+    color: white;
+    background-color: #E07D00;
+    border-radius: 150px;
+    border-style: none;
+    width: 300px;
+    height: 95px;
+    justify-content: center;
+    text-transform: uppercase;
+    margin-left: 615px;
+    margin-top: 100px;
+}
+
+.sucessos button:hover {
+    cursor: pointer;
+    box-shadow: 15px 10px #E07D0027;
+    transition: .7s;
 }
 
 
@@ -235,7 +272,7 @@ h5 {
 }
 
 .sedivirta button:hover {
-    
+
     color: #ffff;
     transition: .2s;
     border-radius: 100px;
@@ -258,7 +295,45 @@ h5 {
 .contato img {
     margin-left: 100px;
     margin-bottom: 300px;
+    margin-top: 300px;
+    
 }
+
+form {
+    display: flex;
+    justify-content: center;
+}
+.forms {
+    background-color: #E07D0090;
+    border-radius: 100px;
+    height: 650px;
+    width: 600px;
+    font-family: "Nunito";  
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.forms img {
+    height: 170px;
+    width: 170px;
+   justify-content: center;
+   display: flex;
+}
+
+
+.contato form label {
+    margin-bottom: 15px;
+    font-size: 500px;
+
+}
+
+h6 {
+    font-family: "Titillium Web";
+    font-size: 40px;
+    text-align: center;
+    margin-top: 75px;
+}
+
 
 .faixa {
     height: 10px;
@@ -268,6 +343,7 @@ h5 {
 
 footer {
     display: flex;
+    padding-bottom: 5%;
     width: 100%;
     height: 250px;
     background-color: #E07D00;
@@ -293,7 +369,7 @@ footer img {
 
 .linkedin:hover {
     cursor: pointer;
-   
+
 }
 
 .insta img {
@@ -307,7 +383,24 @@ footer img {
 
 .linkedin img {
     margin: 0px;
+    
 }
 
+@media screen and (max-width: 1300px) {
+
+    header {
+        
+        
+    }
 
 
+    
+
+
+    }
+
+    
+
+
+
+    
