--- a/style.css
+++ b/style.css
@@ -21,10 +21,26 @@ html {
 }
 
 .header {
+    max-width: 1400px;
     width: 100%;
     height: 122px;
     background-color: #B66400;
 }
+
+
+
+
+.header button {
+
+    display: none;
+
+}
+
+.logogaco1300px {
+    display: none;
+}
+
+
 
 .header div.container-grid {
     height: 100%;
@@ -296,19 +312,20 @@ h4 {
     margin-left: 100px;
     margin-bottom: 300px;
     margin-top: 300px;
-    
+
 }
 
 form {
     display: flex;
     justify-content: center;
 }
+
 .forms {
     background-color: #E07D0090;
     border-radius: 100px;
     height: 650px;
     width: 600px;
-    font-family: "Nunito";  
+    font-family: "Nunito";
     margin-top: 50px;
     margin-bottom: 50px;
 }
@@ -316,8 +333,8 @@ form {
 .forms img {
     height: 170px;
     width: 170px;
-   justify-content: center;
-   display: flex;
+    justify-content: center;
+    display: flex;
 }
 
 
@@ -383,24 +400,53 @@ footer img {
 
 .linkedin img {
     margin: 0px;
-    
+
 }
 
 @media screen and (max-width: 1300px) {
 
-    header {
-        
-        
-    }
-
-
-    
-
+    .header {
+        background-color: #E07D00;
 
     }
 
-    
+    .header button {
+        width: 10px;
+        display: unset;
+        background: none;
+        border: none;
+        margin-top: 15px;
+        margin-left: 930px;
+
+    }
+
+    .logogaco1300px {
+        justify-content: center;
+        width: 50px;
+        display: unset;
+        background: none;
+        border: none;
 
 
 
-    
+    }
+
+    .logo1400px {
+        display: none;
+    }
+
+    .menu {
+        display: none;
+    }
+
+
+
+
+
+
+
+
+
+
+
+}
