--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ html {
 }
 
 .header {
-    max-width: 1400px;
+
     width: 100%;
     height: 122px;
     background-color: #B66400;
@@ -308,19 +308,15 @@ h4 {
 }
 
 
-.contato img {
-    margin-left: 100px;
-    margin-bottom: 300px;
-    margin-top: 300px;
 
-}
+.forms img {
+    margin-right: 192px;
 
-form {
-    display: flex;
-    justify-content: center;
 }
 
 .forms {
+    display: flex;
+    justify-content: center;
     background-color: #E07D0090;
     border-radius: 100px;
     height: 650px;
@@ -332,23 +328,42 @@ form {
 
 .forms img {
     height: 170px;
-    width: 170px;
+    width: 190px;
+    margin-bottom: 375px;
+    
+}
+
+
+.forms {
+    
+    flex-direction: column;
+    
+    
+    align-items: center;
     justify-content: center;
-    display: flex;
 }
 
-
-.contato form label {
-    margin-bottom: 15px;
-    font-size: 500px;
-
+.nome input {
+    height: 35px;
+    width: 350px;
+    background-color: #D9D9D9;
+    border-color: #1E3E93;
+    
+    margin-bottom: px;
 }
 
-h6 {
-    font-family: "Titillium Web";
-    font-size: 40px;
-    text-align: center;
-    margin-top: 75px;
+.email input {
+    height: 30px;
+    width: 230px;
+    background-color: #D9D9D9;
+    border-color: #1E3E93;
+}
+
+.Contato input {
+    height: 30px;
+    width: 230px;
+    background-color: #D9D9D9;
+    border-color: #1E3E93;
 }
 
 
@@ -365,6 +380,17 @@ footer {
     height: 250px;
     background-color: #E07D00;
 }
+
+.forms img {
+    height: 120px;
+
+    margin-left: 200px;
+}
+
+.nome {
+    font-family: "Nunito";
+}
+
 
 footer img {
     height: 100px;
@@ -407,18 +433,11 @@ footer img {
 
     .header {
         background-color: #E07D00;
+        width: 100%;
 
     }
 
-    .header button {
-        width: 10px;
-        display: unset;
-        background: none;
-        border: none;
-        margin-top: 15px;
-        margin-left: 930px;
 
-    }
 
     .logogaco1300px {
         justify-content: center;
@@ -427,17 +446,116 @@ footer img {
         background: none;
         border: none;
 
-
-
     }
 
     .logo1400px {
         display: none;
     }
 
-    .menu {
+
+
+
+    .sobre img {
         display: none;
+
     }
+
+    .sobre p {
+        display: flex;
+        text-align: center;
+        margin-left: 180px;
+        font-size: 30px;
+    }
+
+    .carrossel h1 {
+        font-size: 35px;
+    }
+
+    .sucessos button {}
+
+    .carrosselimg img {
+        width: 150px;
+
+    }
+
+    .carrossel h1 {
+        font-size: 30px;
+    }
+
+    .gamificacao h2 {
+        font-size: 30px;
+    }
+
+    .gamificacao h3 {
+        font-size: 30px;
+    }
+
+    .gamificacao p {
+        font-size: 20px;
+    }
+
+    .sucessos h4 {
+        font-size: 30px;
+    }
+
+    .empresa p {
+        font-size: 20px;
+    }
+
+    .escola p {
+        font-size: 20px;
+    }
+
+    .hospital p {
+        font-size: 20px;
+    }
+
+    .sucessos button {
+        font-size: 17px;
+        height: 55px;
+        width: 150px;
+        margin-left: 542px;
+    }
+
+    .sucessos {
+        height: 800px;
+    }
+
+    .retangulo1 {
+        height: 60px;
+    }
+
+    .retangulo2 {
+        height: 60px;
+    }
+
+    .insta & .x & .linkedin {
+        margin-right: 150px;
+    }
+
+    .empresa img {
+        height: 200px;
+    }
+
+    .escola img {
+        height: 200px;
+    }
+
+    .hospital img {
+        height: 200px;
+
+    }
+
+    .sedivirta p {
+        font-size: 30px
+    }
+
+    .sedivirta button {
+        border-radius: 50px;
+    }
+
+
+
 
 
 
